Adjust the number of update notifications to skip for slow jumplist updates

This CL reduces the number of update notifications to skip when a previous update
was too slow from 10 to 2. This is an adjustment after fixing crbug/761063, where
jumplist receives lots of fake update notifications from TopSites. Before that fix,
jumplist receives 50k notifications from TabRestore service and 170k notifications
from TopSites per day in Canary. After that fix, jumplist receives only 5k update
notifications from TopSites, which is only 3% of the original amount.

Therefore, this CL ensures that the user will get a jumplist update after closing 3
tabs if a previous update was too slow. This is a good compromise between alleviating
the machine under heavy load and keeping jumplist useful.

Bug: 736530
Cq-Include-Trybots: master.tryserver.chromium.win:win10_chromium_x64_rel_ng
Change-Id: I3ab3195bf0bbd4a965d15dba546100adcbd4fb59
Reviewed-on: https://chromium-review.googlesource.com/636324
Commit-Queue: Xi Cheng <chengx@chromium.org>
Reviewed-by: Greg Thompson <grt@chromium.org>
Cr-Commit-Position: refs/heads/master@{#500944}
Former-commit-id: 6b40ba4fe84de066c4d00dda095ce0a46a6af110